--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Buhua Liu (刘卜华）"
 title_separator          : "-"
 name                     : &name "Buhua Liu"
 description              : &description "personal description"
-url                      : https://liubuhua.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://Buhua-Liu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Buhua-Liu/Buhua-Liu.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
