--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Buhua Liu"
-  avatar           : "buhua.png"
+  avatar           : "buhua.jpg"
   bio              : "PhD student <br> Hong Kong Baptist University"
   location         : "Hong Kong SAR"
   employer         :
