--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Buhua Liu"
   avatar           : "buhua.jpg"
-  bio              : "MPhil student <br> Hong Kong Baptist University"
+  bio              : "MPhil candidate <br> Hong Kong Baptist University"
   location         : "Hong Kong SAR"
   employer         :
 #   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
