--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Buhua Liu"
   avatar           : "buhua.jpg"
-  bio              : "MPhil @ HKBU <be> B.Eng. HUST"
+  bio              : "MPhil @ HKBU <br> B.Eng. @ HUST"
   location         : "Hong Kong SAR"
   employer         :
 #   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
