--- a/_config.yml
+++ b/_config.yml
@@ -86,8 +86,8 @@ author:
   location         : "Hong Kong SAR"
   employer         :
 #   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-#   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            : csbhliu@comp.hkbu.edu.hk
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=ShzRO3kAAAAJ"
+  email            : bryceliu@foxmail.com
   researchgate     :  "https://www.researchgate.net/profile/Buhua-Liu"
   uri              :
   bitbucket        :
